--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="headerbody">
 <div class="header">
   <a href="#default" class="logo">STUDIOUS <br>GURU</a>
-  <img src="./assets/image/booklogo.png"></imgsrc>
+  <img src="./assets/images/booklogo.png"></imgsrc>
   <div class="header-right">
     <a class="active" href="#special">Special Course</a>
     <a href="#contactme">Contact</a>
