--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <img src="./image/Spoken english Inside.jpg" alt="Jane" style="width:100%">
+              <img src="./assets/images/Spoken english Inside.jpg" alt="Jane" style="width:100%">
               <div class="container">
                 <h2>Spoken English</h2>
                 <p class="title">90 days Special</p>
@@ -92,7 +92,7 @@
         
           <div class="column">
             <div class="card">
-              <img src="./image/tally-prime.jpg" alt="Mike" style="width:100%">
+              <img src="./assets/images/tally-prime.jpg" alt="Mike" style="width:100%">
               <div class="container">
                 <h2>TALLY</h2>
                 <p class="title">ACCOUNTING SOFTWARE</p>
@@ -104,7 +104,7 @@
           
           <div class="column">
             <div class="card">
-              <img src="./image/Python-01.png" alt="John" style="width:100%">
+              <img src="./assets/images/Python-01.png" alt="John" style="width:100%">
               <div class="container">
                 <h2>PYTHON</h2>
                 <p class="title">CODING LANGUAGE</p>
